# ops2deb

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  build-single-binary-application.sh  debops.yml  mypy.ini  ops2deb.lock.yml  ops2deb.yml  pyoxidizer.bzl  pyproject.toml  renovate.json  setup.cfg
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: checks.yml  cicd.yml
src/debops/: cli.py  fetcher.py  generator.py  parser.py  settings.py  updater.py
src/debops/templates/: changelog.j2  control.j2
src/ops2deb/: __main__.py  apt.py  builder.py  cli.py  client.py  delta.py  exceptions.py  extracter.py  fetcher.py  formatter.py  generator.py  jinja.py  lockfile.py  logger.py  migrate.py  parser.py  settings.py  templates.py  updater.py  utils.py
src/ops2deb/templates/: changelog.j2  control.j2  install.j2  lintian-overrides.j2  rules.j2
tests/: conftest.py  test_apt.py  test_builder.py  test_cli.py  test_debops.py  test_delta.py  test_extracter.py  test_fetcher.py  test_formatter.py  test_generator.py  test_jinja.py  test_lockfile.py  test_ops2deb.py  test_parser.py  test_updater.py  test_utils.py
